package br.gov.serpro.vaas.domain

enum class AuthType {
    BASIC,
    OAUTH2
}
